# multi-agent-system

./: .dockerignore  .env.example  .env.production  .gitignore  .mcp.json.example  .syncprotect  .trivyignore  60_PERCENT_CONFIDENCE_EXPLAINED.md  AGENTS.md  AGENT_SKILLS_SUMMARY.md  AGENT_TRUST_IMPLEMENTATION_SUMMARY.md  ARTEMIS_TECHNICAL_AUDIT_ISSUE_62.md  ARTEMIS_WEEK1_TECHNICAL_ANALYSIS.md  ATHENA_ARCHITECTURE_HARMONY_ANALYSIS_2025_10_20.md  ATHENA_LICENSE_DISTRIBUTION_ANALYSIS.md  AUTHENTICATION_TEST_SUMMARY.md  AUTOCONNECT_FIX_GUIDE.md  CHANGELOG.md  CLAUDE.md  CLAUDE_MEMORY_COOKBOOK_INTEGRATION_ANALYSIS.md  CLEANUP_SUMMARY.md  CODE_CLEANUP_EXECUTION_PLAN.md  CODE_QUALITY_AUDIT_REPORT.md  CONTRIBUTING.md  COVERAGE_IMPROVEMENT_REPORT.md  CURRENT_PERFORMANCE_ANALYSIS.md  DEADCODE_SECURITY_RISK_ANALYSIS.md  DEPENDENCY_RESOLUTION_REPORT_2025_10_24.md  DEPLOYMENT_GUIDE_v2.2.0.md  DEVELOPMENT_ROADMAP.md  DOCKER_DEPLOYMENT_GUIDE.md  DOCKER_QUICKSTART.md  DOCUMENTATION_AUDIT_REPORT.md  DOCUMENTATION_AUDIT_SUMMARY.md  Dockerfile  EXCEPTION_HANDLING_FIX_2025_10_16.md  FASTAPI_DEAD_CODE_DELETION_2025_10_16.md  FASTAPI_DEPENDENCY_ANALYSIS.md  FEATURE_UTILIZATION_MATRIX.md  GAP_INTEGRATION_COMPLETE.md  (+115 more)
.claude/: CLAUDE.md  SUBAGENT_EXECUTION_RULES.md  trinitas_integration.md
.opencode/: AGENTS.md  opencode.md
.security-backup/: env.cloud.backup.20251025_132611
.serena/: project.yml
.trinitas-tmp/: .gitignore  AGENT_SKILLS_ARCHITECTURE.md  PHASE1_IMPLEMENTATION_SUMMARY.md  README-OPENCODE.md  SECURITY_AUDIT_REPORT_HESTIA.md  TMWS_INQUIRY_RESPONSE.md  TRINITAS_STRATEGIC_ARCHITECTURE_v2025.md  TRINITAS_V2.3.0_REVISED_IMPLEMENTATION_PLAN.md  install_opencode.sh  install_trinitas.ps1  opencode.json  pytest.ini  requirements-dev.txt  requirements-test.txt
agents/: artemis-optimizer.md  athena-conductor.md  eris-coordinator.md  hera-strategist.md  hestia-auditor.md  muses-documenter.md
agetns/: athena-conductor.md  hera-strategist.md
claudecode/: AGENTS.md  CLAUDE.md  SUBAGENT_EXECUTION_RULES.md
config/: patterns.yaml  persona_patterns.json  production.env.secure  production.yaml  tmws.yaml
contexts/: performance.md
docker/: docker-compose.tmws-go.yml  entrypoint.sh
docs/: AGENT_TRUST_VERIFICATION_SYSTEM.md  AI_AGENT_INTEGRATION_GUIDE.md  API_AUTHENTICATION.md  API_KEY_MANAGEMENT.md  AUTHENTICATION_DOCUMENTATION_SUMMARY.md  AUTHENTICATION_EXAMPLES.md  CLAUDE_CODE_SETUP.md  CLAUDE_DESKTOP_MCP_SETUP.md  CLAUDE_DESKTOP_SETUP.md  CODE_QUALITY_AUDIT_REPORT.md  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_GUIDE_v2.3.1.md  DEVELOPMENT_SETUP.md  DOCKER_MCP_SETUP.md  DOCUMENTATION_CLEANUP_SPECIFICATION.md  DOCUMENTATION_IMPROVEMENT_PLAN.md  DOCUMENT_REGISTRY_PERFORMANCE.md  HYBRID_CLOUD_SECURITY_POLICY.md  HYBRID_MIGRATION_ROADMAP.md  IMMEDIATE_ACTION_ITEMS.md  INSTALLATION_GUIDE.md  INTEGRATION_DECISION_BRIEF.md  INTEGRATION_PATTERNS.md  INTEGRATION_TESTING_COORDINATION_CHECKLIST.md  INTEGRATION_TESTING_OVERVIEW.md  INTEGRATION_TESTING_SUMMARY.md  INTEGRATION_TEST_PLAN.md  INTEGRATION_TEST_RESULTS.md  LEARNING_PATTERN_API.md  MCP_CONNECTION_DOCKER.md  MCP_INTEGRATION.md  MCP_TOOLS_REFERENCE.md  MEM0_MIGRATION_STATUS.md  MEMORY_MONITOR_PERFORMANCE_VALIDATION.md  NARRATIVE_INTEGRATION_V3.md  OLLAMA_INTEGRATION_GUIDE.md  OPENCODE_PLUGINS_SECURITY_REQUIREMENTS.md  OPTION_D_IMPLEMENTATION_PREVIEW.md  PATTERN_DEVELOPER_GUIDE.md  (+50 more)
examples/: memory_repository_demo.py  pattern_execution_examples.py  persona_parser_demo.py  sparse_registry_example.py
hooks/: optimized_protocol.json  pre-commit-document-registry  settings.json.old_v1  settings_dynamic.json  settings_global.template.json  settings_unified.json  settings_windows.template.json
migrations/: env.py
opencode/: AGENTS.md  SUBAGENT_EXECUTION_RULES.md  opencode.json  opencode.md
phase_2e_3_results/: bytecode_verification.json  integration_tests_e2e.json  performance_benchmarks.json
scripts/: README.md  build.sh  build_bytecode_wheel.sh  build_protocol_md.sh  check_database.py  deploy.sh  document_registry.py  execute_v2_migration.sh  generate_license.py  generate_mcp_config.sh  import_personas.py  init-db.sql  init_db_encryption.py  install-production.sh  install-ubuntu-v2.4.0.sh  install_document_registry.sh  install_production.sh  manage_licenses.py  migrate_chroma_collection.py  migrate_to_agents.py  optimize_loading.sh  phase_3b_performance_validation.py  restore-uvx-config.sh  run_integration_tests.sh  run_mcp.py  run_migrations.py  run_tests.sh  scan_base_images.sh  security_hardening.sh  security_setup.py  seed_workflow_templates.py  setup_database.py  (+22 more)
(+1269 files in other folders)
