[project]
name = "tmws"
version = "2.4.0"
description = "Trinitas Memory & Workflow Service - Multi-agent AI coordination with SQLite + Chroma architecture + Trinitas Agents"
authors = [
    {name = "Trinitas Development Team", email = "dev@trinitas.ai"}
]
requires-python = ">=3.11"
dependencies = [
    # Web Framework (FastAPI for v2.x compatibility)
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.25.0",
    # MCP Server dependencies (v3.0: MCP only)
    "fastmcp>=0.1.0",
    "mcp>=0.9.0",
    "ttl-cache>=1.3.0",
    # Core dependencies
    "websockets>=12.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.0.0",
    # Database (v2.2.6: SQLite + Chroma architecture)
    "sqlalchemy>=2.0.23",
    "alembic>=1.12.0",
    "aiosqlite>=0.19.0",  # Async SQLite driver
    "greenlet>=3.0.0",
    # Vector search (v2.3.0: ChromaDB + Ollama embeddings)
    "chromadb>=0.4.22",
    "numpy>=1.24.0",
    # Utilities
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.6",
    "httpx>=0.25.0",
    "structlog>=23.0.0",
    "aiohttp>=3.9.0",
    "python-dateutil>=2.8.2",
    # Security
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "email-validator>=2.1.0",
    "cryptography>=42.0.0",
    "PyJWT>=2.8.0",
    "hvac>=2.0.0",
    "bleach[css]>=6.0.0",  # HTML sanitization with CSS support - REQUIRED
    # Background Tasks
    "celery>=5.3.0",
    "redis>=5.0.0",
    # Monitoring
    "prometheus-client>=0.19.0",
    "watchfiles>=0.20.0",
    # Required by starlette
    "itsdangerous>=2.0.0",
    "psutil>=5.9.0",
    "geoip2>=5.1.0",
    "maxminddb>=2.8.2",
    # Optional but recommended
    "bleach>=6.0.0",
]

[project.scripts]
tmws = "src.mcp_server:main"
tmws-mcp-server = "src.mcp_server:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pytest-env>=1.1.0",
    "pytest-html>=4.0.0",
    "pytest-timeout>=2.2.0",
    "pytest-mock>=3.12.0",
    "pytest-benchmark>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.6.0",
    "ruff>=0.1.9",
    "pre-commit>=3.6.0",
]

monitoring = [
    "opentelemetry-api>=1.22.0",
    "opentelemetry-sdk>=1.22.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "tmws*"]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
addopts = "--verbose --cov=src --cov-report=term-missing --cov-report=html"
markers = [
    "benchmark: Performance benchmark tests for Phase 1 verification"
]

[tool.black]
line-length = 100
target-version = ["py310", "py311"]
include = "\\.pyi?$"

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_unimported = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
check_untyped_defs = true
strict_equality = true

[tool.ruff]
line-length = 100
target-version = "py310"
# Temporary: Disable for license service during signature-only validation implementation
exclude = ["src/services/license_service.py"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "ARG",  # flake8-unused-arguments
    "SIM",  # flake8-simplify
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "B904",  # raise from
]

[tool.ruff.lint.per-file-ignores]
# Test files: pytest fixtures often require unused arguments
"tests/**/*.py" = ["ARG001", "ARG002"]
# E2E tests: performance timers and other fixtures
"tests/e2e/**/*.py" = ["ARG002", "SIM117"]

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/test_*.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]